2004-08-30  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (maybe_escaped_expansion): new routine, like
		expansion but does HTML escapes.
	* makeinfo/makeinfo.h (maybe_escaped_expansion): declare.
	* makeinfo/index.c (cm_printindex): call it.
	This is @cindex Kahrs, J@"urgen does not get
	gawk.texi:23425: Unknown command `&quot;urgen'.
	(in gawk 3.1.4).
	Report from: Stepan Kasal <kasal@ucw.cz>, 24 Aug 2004 12:36:34 +0200.

2004-08-29  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (split_file): do not search for output file
		along the path when calling find_and_load (can cause seg
		fault when cross-compiling).
	From: Martin Husemann <martin@duskware.de>, 29 Aug 2004 08:40:33 +0200.
	http://www.netbsd.org/cgi-bin/query-pr-single.pl?number=26791

2004-08-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Macro details): more warnings about macro usage.
	Report from: Stepan Kasal <kasal@ucw.cz>, 24 Aug 2004 09:29:35 +0200.

	* doc/texinfo.tex (\Efloat): \vskip\parskip after printing the
	caption; previous \printedsomething code to do this had become
	obsolete.  Reported by Stepan.

	* doc/texinfo.txi (caption shortcaption): show an example for
        @shortcaption, and remark that weird commands like @c and @verb
	are not allowed.  Suggested by Stepan.

2004-08-27  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\initial): when breaking the column before the
	  initial, allow for some space at the bottom of the column, so
	  the baselineskip is preserved (more or less).
	  Don't give negative penalty, it encouradges creating of underfull
	  columns with stretched baselineskip.
	  At the end, the \nobreak should be before \vskip, not after it.

2004-08-26  Stepan Kasal  <kasal@ucw.cz>

	* util/texi2dvi: fix the sed script searching for @documentencoding;
	  Double-quote some instances of "$filename_???"

2004-08-26  Akim Demaille  <akim@epita.fr>

	Let DVI and PDF files honor the document encoding in TeX.
